@@ -9,12 +9,10 @@ public class ServerController {
 
     private boolean isWork;
     private ServerView serverView;
-    private String nameChat;
     private List<ClientController> listClientController;
 
     public ServerController(ServerView serverView) {
         this.serverView = serverView;
-        this.nameChat = serverView.getNameChat();
     }
 
     public void stop() {
@@ -51,7 +49,7 @@ public class ServerController {
         } else {
             isWork = false;
             while (!listClientController.isEmpty()){
-                disconnectUser(listClientController.get(listClientController.size() - 1));
+                disconnectUser(listClientController.getLast());
             }
             showOnWindow("Server stopped");
         }
